--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-/* @font-face {
-    font-family: "Bitstream Vera Serif Bold";
-    src: url("https://mdn.mozillademos.org/files/2468/VeraSeBd.ttf");
-  } */
 
-  /* НАЧАЛО СТИЛЕЙ */
+
+/*# sourceMappingURL=style.css.map */
