--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -1,112 +1,95 @@
 /* Costom styles | 
    ========================================================================== */
-/* line 4, _reset.scss */
+
 img {
-  max-width: 100%;
-  height: auto;
+	max-width: 100%;
+	height: auto;
 }
 
-/* line 9, _reset.scss */
-a {
-  color: #b4ad9e;
+a	{
+	color: #b4ad9e;
 }
 
-/* line 13, _reset.scss */
-a:hover {
-  color: #898377;
+a:hover	{
+	color: #898377;
 }
 
 /* Mobile burger menu costomization | 
    ========================================================================== */
-/* line 20, _reset.scss */
+   
 .navbar-toggler {
-  background: none;
-  border: none;
-}
-
-/* line 25, _reset.scss */
+    background: none;
+    border: none;
+  }
+  
 .navbar-toggler:active,
-.navbar-toggler:focus {
-  outline: 0;
-}
-
-/* line 30, _reset.scss */
+  .navbar-toggler:focus {
+    outline: 0;
+  }
+  
 .navbar-toggler .icon-bar {
-  display: block;
-  width: 22px;
-  height: 2px;
-  border-radius: 1px;
-  margin: 4px 0 4px 0;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-/* line 39, _reset.scss */
+    display: block;
+    width: 22px;
+    height: 2px;
+    border-radius: 1px;
+    margin: 4px 0 4px 0;
+    transition: all 0.2s;
+  }
+  
 .navbar .navbar-toggler .icon-bar {
-  background: #000;
-}
-
-/* line 43, _reset.scss */
+    background: #000;
+  }
+  
 .navbar-toggler .icon-bar:nth-of-type(1) {
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  -webkit-transform-origin: 10% 10%;
-          transform-origin: 10% 10%;
-}
-
-/* line 48, _reset.scss */
+    transform: rotate(45deg);
+    transform-origin: 10% 10%;
+  }
+  
 .navbar-toggler .icon-bar:nth-of-type(2) {
-  opacity: 0;
-  filter: alpha(opacity=0);
-}
-
-/* line 53, _reset.scss */
+    opacity: 0;
+    filter: alpha(opacity=0);
+  }
+  
 .navbar-toggler .icon-bar:nth-of-type(3) {
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-  -webkit-transform-origin: 10% 90%;
-          transform-origin: 10% 90%;
-}
-
-/* line 58, _reset.scss */
+    transform: rotate(-45deg);
+    transform-origin: 10% 90%;
+  }
+  
 .navbar-toggler.collapsed .icon-bar:nth-of-type(1) {
-  -webkit-transform: rotate(0);
-          transform: rotate(0);
-}
-
-/* line 62, _reset.scss */
+    transform: rotate(0);
+  }
+  
 .navbar-toggler.collapsed .icon-bar:nth-of-type(2) {
-  opacity: 1;
-  filter: alpha(opacity=100);
-}
-
-/* line 67, _reset.scss */
+    opacity: 1;
+    filter: alpha(opacity=100);
+  }
+  
 .navbar-toggler.collapsed .icon-bar:nth-of-type(3) {
-  -webkit-transform: rotate(0);
-          transform: rotate(0);
-}
+    transform: rotate(0);
+  }
 
 /*! normalize CSS v8.0.1 | MIT License */
+
 /* Document
    ========================================================================== */
+
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-/* line 81, _reset.scss */
+
 html {
-  line-height: 1.15;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
    ========================================================================== */
+
 /**
  * Remove the margin in all browsers.
  */
-/* line 93, _reset.scss */
+
 body {
   margin: 0;
 }
@@ -114,7 +97,7 @@ body {
 /**
  * Render the `main` element consistently in IE.
  */
-/* line 101, _reset.scss */
+
 main {
   display: block;
 }
@@ -123,7 +106,7 @@ main {
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
-/* line 110, _reset.scss */
+
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
@@ -131,39 +114,35 @@ h1 {
 
 /* Grouping content
    ========================================================================== */
+
 /**
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
  */
-/* line 123, _reset.scss */
+
 hr {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
 }
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
-/* line 134, _reset.scss */
+
 pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /* Text-level semantics
    ========================================================================== */
+
 /**
  * Remove the gray background on active links in IE 10.
  */
-/* line 146, _reset.scss */
+
 a {
   background-color: transparent;
 }
@@ -172,21 +151,17 @@ a {
  * 1. Remove the bottom border in Chrome 57-
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
-/* line 155, _reset.scss */
+
 abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
-  /* 2 */
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
 }
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
-/* line 165, _reset.scss */
+
 b,
 strong {
   font-weight: bolder;
@@ -196,20 +171,18 @@ strong {
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
-/* line 175, _reset.scss */
+
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /**
  * Add the correct font size in all browsers.
  */
-/* line 186, _reset.scss */
+
 small {
   font-size: 80%;
 }
@@ -218,7 +191,7 @@ small {
  * Prevent `sub` and `sup` elements from affecting the line height in
  * all browsers.
  */
-/* line 195, _reset.scss */
+
 sub,
 sup {
   font-size: 75%;
@@ -227,56 +200,51 @@ sup {
   vertical-align: baseline;
 }
 
-/* line 203, _reset.scss */
 sub {
   bottom: -0.25em;
 }
 
-/* line 207, _reset.scss */
 sup {
   top: -0.5em;
 }
 
 /* Embedded content
    ========================================================================== */
+
 /**
  * Remove the border on images inside links in IE 10.
  */
-/* line 218, _reset.scss */
+
 img {
   border-style: none;
 }
 
 /* Forms
    ========================================================================== */
+
 /**
  * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
  */
-/* line 230, _reset.scss */
+
 button,
 input,
 optgroup,
 select,
 textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
 }
 
 /**
  * Show the overflow in IE.
  * 1. Show the overflow in Edge.
  */
-/* line 246, _reset.scss */
+
 button,
-input {
-  /* 1 */
+input { /* 1 */
   overflow: visible;
 }
 
@@ -284,17 +252,16 @@ input {
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
  * 1. Remove the inheritance of text transform in Firefox.
  */
-/* line 256, _reset.scss */
+
 button,
-select {
-  /* 1 */
+select { /* 1 */
   text-transform: none;
 }
 
 /**
  * Correct the inability to style clickable types in iOS and Safari.
  */
-/* line 265, _reset.scss */
+
 button,
 [type="button"],
 [type="reset"],
@@ -305,7 +272,7 @@ button,
 /**
  * Remove the inner border and padding in Firefox.
  */
-/* line 276, _reset.scss */
+
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
@@ -317,7 +284,7 @@ button::-moz-focus-inner,
 /**
  * Restore the focus styles unset by the previous rule.
  */
-/* line 288, _reset.scss */
+
 button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
@@ -328,7 +295,7 @@ button:-moz-focusring,
 /**
  * Correct the padding in Firefox.
  */
-/* line 299, _reset.scss */
+
 fieldset {
   padding: 0.35em 0.75em 0.625em;
 }
@@ -339,27 +306,20 @@ fieldset {
  * 3. Remove the padding so developers are not caught out when they zero out
  *    `fieldset` elements in all browsers.
  */
-/* line 310, _reset.scss */
+
 legend {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
 }
 
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
-/* line 323, _reset.scss */
+
 progress {
   vertical-align: baseline;
 }
@@ -367,7 +327,7 @@ progress {
 /**
  * Remove the default vertical scrollbar in IE 10+.
  */
-/* line 331, _reset.scss */
+
 textarea {
   overflow: auto;
 }
@@ -376,20 +336,17 @@ textarea {
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-/* line 340, _reset.scss */
+
 [type="checkbox"],
 [type="radio"] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
 }
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-/* line 350, _reset.scss */
+
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
   height: auto;
@@ -399,18 +356,16 @@ textarea {
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-/* line 360, _reset.scss */
+
 [type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
 }
 
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-/* line 369, _reset.scss */
+
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
@@ -419,20 +374,19 @@ textarea {
  * 1. Correct the inability to style clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
  */
-/* line 378, _reset.scss */
+
 ::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
 }
 
 /* Interactive
    ========================================================================== */
+
 /*
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
-/* line 390, _reset.scss */
+
 details {
   display: block;
 }
@@ -440,17 +394,18 @@ details {
 /*
  * Add the correct display in all browsers.
  */
-/* line 398, _reset.scss */
+
 summary {
   display: list-item;
 }
 
 /* Misc
    ========================================================================== */
+
 /**
  * Add the correct display in IE 10+.
  */
-/* line 409, _reset.scss */
+
 template {
   display: none;
 }
@@ -458,8 +413,7 @@ template {
 /**
  * Add the correct display in IE 10.
  */
-/* line 417, _reset.scss */
+
 [hidden] {
   display: none;
 }
-/*# sourceMappingURL=style.css.map */
