--- a/css/style.scss
+++ b/css/style.scss
@@ -341,6 +341,10 @@ label{
 
 // !!!***---Price---***!!!
 
+.custom-select{
+    cursor: pointer;
+}
+
 .card{
     border-radius: .55rem;
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
@@ -406,4 +410,81 @@ label{
 
 .card-right button{
     background-color: #112d4e !important;
+    border-color: #112d4e;
+}
+
+// !!!***---Our partners---***!!!
+
+#partners img{
+    max-height: 70%;
+    -webkit-filter: opacity(0.5);
+}
+
+#partners img:hover{
+    max-height: 80%;
+    -webkit-filter: opacity(1);
+    transition: all .4s;
+    cursor: pointer;
+}
+
+// !!!***---Review---***!!!
+
+.review_carusel .item{
+    border-radius: .55rem;
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+    position: relative;
+    width: 600px;
+    height: 250px;
+}
+
+.review_quotes{
+    position: absolute;
+    top: -70%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+    overflow: hidden;
+    font-family: 'Playfair Display', serif !important;
+    color: #d0dae8;
+    font-size: 250px;
+}
+
+.item .review-txt{
+    @extend %p-style;
+    font-size: 18px;
+    font-weight: 800;
+    display: inline-block;
+    margin: 9% 9% 2% 9%;
+
+}
+
+// !!!***---FAQ---***!!!
+
+.faq_ttl{
+    @extend %p-style;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 900;
+}
+
+.faq_descr{
+    @extend %p-style;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    font-weight: 100;
+}
+
+.row_faqs button{
+    @extend %buttons;
+    @extend %button-menu;
+    display: block;
+    margin: 0 auto;
+    background-color: $color-prim !important;
+    border-color: $color-prim;
+}
+
+.faq_hid-left,
+.faq_hid-right{
+    display: none;
 }
