--- a/css/style.scss
+++ b/css/style.scss
@@ -488,3 +488,58 @@ label{
 .faq_hid-right{
     display: none;
 }
+
+  // !!!***---MAP---***!!!
+
+.map_row{
+    position: relative;
+}
+
+  section.map {
+    width:100%;
+    height:100%;
+    overflow:hidden;
+  }
+  
+  iframe {
+    margin-top:-50px;
+    pointer-events: none;
+  }
+
+  .clicked{
+    pointer-events: auto;
+  }
+
+  .map_informer{
+    position: absolute;
+    left: 30%;
+    top: 15%;
+    width: 17em;
+    height: 23em !important;
+  }
+
+.map_informer_ttl{
+    @extend %p-style;
+    font-size: 26px;
+    font-weight: 900;
+    margin: 2.5em 0 1.5em 1em;
+}
+
+.map_info_block{
+    margin: 0 0 1.5em 2em;
+}
+
+.map_informer_sub-ttl{
+    @extend %p-style;
+    font-size: 15px;
+    font-weight: 100;
+    margin: 0 auto;
+    font-weight: 600;
+}
+
+.map_informer_info{
+    @extend %p-style;
+    font-size: 15px;
+    font-weight: 100;
+    color: #000;
+}
