--- a/css/style.css
+++ b/css/style.css
@@ -932,21 +932,22 @@ iframe {
   top: 15%;
   width: 17em;
   height: 23em !important;
+  z-index: 1;
 }
 
-/* line 521, style.scss */
+/* line 522, style.scss */
 .map_informer_ttl {
   font-size: 26px;
   font-weight: 900;
   margin: 2.5em 0 1.5em 1em;
 }
 
-/* line 528, style.scss */
+/* line 529, style.scss */
 .map_info_block {
   margin: 0 0 1.5em 2em;
 }
 
-/* line 532, style.scss */
+/* line 533, style.scss */
 .map_informer_sub-ttl {
   font-size: 15px;
   font-weight: 100;
@@ -954,54 +955,133 @@ iframe {
   font-weight: 600;
 }
 
-/* line 540, style.scss */
+/* line 541, style.scss */
 .map_informer_info {
   font-size: 15px;
   font-weight: 100;
   color: #000;
 }
 
-/* line 548, style.scss */
+/* line 549, style.scss */
 #footer {
   background-color: #112d4e;
 }
 
-/* line 552, style.scss */
+/* line 553, style.scss */
 .footer_txt,
 .footer_txt a {
   color: #ededed;
 }
 
-/* line 558, style.scss */
+/* line 559, style.scss */
 .footer_txt-hdr {
   color: #ededed !important;
 }
 
-/* line 563, style.scss */
+/* line 564, style.scss */
 .footer_links {
   padding: 0;
   line-height: 2.2em;
 }
 
-/* line 568, style.scss */
+/* line 569, style.scss */
 .footer_links li {
   list-style: none;
 }
 
-/* line 572, style.scss */
+/* line 573, style.scss */
 .footer_icons img {
   margin-left: .4em;
   cursor: pointer;
 }
 
-/* line 577, style.scss */
+/* line 578, style.scss */
 .line {
   background-color: #fff;
 }
 
-/* line 581, style.scss */
+/* line 582, style.scss */
 .adress {
   color: #ededed;
+}
+
+@media (max-width: 1200px) {
+  /* line 594, style.scss */
+  .hdr-pic {
+    position: relative;
+  }
+
+  /* line 597, style.scss */
+  .hdr-content-ttl {
+    margin: 0 auto;
+  }
+
+  /* line 600, style.scss */
+  .call2act_block p {
+    margin: 1em 12em;
+  }
+
+  /* line 604, style.scss */
+  .card button {
+    left: 40% !important;
+  }
+}
+@media (max-width: 1100px) {
+  /* line 610, style.scss */
+  .map_informer {
+    position: inherit !important;
+    left: 0;
+    margin: 5% 0 0 0;
+    text-align: center;
+  }
+}
+@media (max-width: 991px) {
+  /* line 619, style.scss */
+  .card button {
+    left: 35% !important;
+  }
+}
+@media (max-width: 800px) {
+  /* line 625, style.scss */
+  .call2act_block p {
+    margin: 1em 4em;
+  }
+}
+@media (max-width: 767px) {
+  /* line 631, style.scss */
+  .card button {
+    left: 30% !important;
+  }
+}
+@media (max-width: 600px) {
+  /* line 637, style.scss */
+  .review_carusel .item {
+    width: 400px;
+  }
+}
+@media (max-width: 470px) {
+  /* line 644, style.scss */
+  .card button {
+    left: 27% !important;
+  }
+}
+@media (max-width: 420px) {
+  /* line 650, style.scss */
+  .card button {
+    left: 25% !important;
+  }
+}
+@media (max-width: 400px) {
+  /* line 656, style.scss */
+  .card button {
+    left: 20% !important;
+  }
+}
+@media (max-width: 310px) {
+  /* line 662, style.scss */
+  .card button {
+    left: 15% !important;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
